fixed api key visible

--- a/public/CinemApp.html/style.css
+++ b/public/CinemApp.html/style.css
@@ -32,6 +32,7 @@ header a {
 }
 .search:focus {
     background-color: #031120;
+    outline: none;
 }
 
 main {
